# FixMacroOnClang

./: CMakeLists.txt  DataTypesDef.h  DeclareDatatypes.h  Protocol.h  README.md  TestClang.cpp  preprocessor.h
macro/: UndefDataTypesDef.h
